# proxy-router/docs/swagger.json
@@ -3226,9 +3226,6 @@
                 "error": {
                     "type": "string"
                 },
-                "expiresAt": {
-                    "type": "string"
-                },
                 "modelId": {
                     "type": "string"
                 },
@@ -3254,14 +3251,12 @@
             "enum": [
                 "passed",
                 "failed",
-                "unknown",
-                "expired"
+                "unknown"
             ],
             "x-enum-varnames": [
                 "StatusPassed",
                 "StatusFailed",
-                "StatusUnknown",
-                "StatusExpired"
+                "StatusUnknown"
             ]
         },
         "attestation.TEEType": {
@@ -4072,6 +4067,12 @@
         "proxyapi.PingRes": {
             "type": "object",
             "properties": {
+                "models": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/system.ModelHealthReport"
+                    }
+                },
                 "ping": {
                     "type": "integer"
                 },
@@ -4759,6 +4760,12 @@
                         "type": "string"
                     }
                 },
+                "models": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/system.ModelHealthReport"
+                    }
+                },
                 "status": {
                     "type": "string"
                 },
@@ -4766,6 +4773,41 @@
                     "type": "string"
                 },
                 "version": {
+                    "type": "string"
+                }
+            }
+        },
+        "system.ModelHealthReport": {
+            "type": "object",
+            "properties": {
+                "bidId": {
+                    "type": "string"
+                },
+                "errorKind": {
+                    "type": "string"
+                },
+                "hasActiveBid": {
+                    "type": "boolean"
+                },
+                "lastChecked": {
+                    "type": "integer"
+                },
+                "lastHealthy": {
+                    "type": "integer"
+                },
+                "latencyMs": {
+                    "type": "integer"
+                },
+                "modelId": {
+                    "type": "string"
+                },
+                "modelType": {
+                    "type": "string"
+                },
+                "promptCorrect": {
+                    "type": "boolean"
+                },
+                "status": {
                     "type": "string"
                 }
             }
